fixing scrollbar

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -2,11 +2,12 @@ body {
     color: white;
     font-family: 'Segoe UI Light', Geneva, Verdana, sans-serif;
     background-color: black;
+    overflow: auto;
 }
 
 .background {
-    width: 100vw;
-    height: 100vh;
+    width: 99%;
+    height: 99%;
     z-index: 0;
 }
 
@@ -15,8 +16,8 @@ body {
     overflow: auto;
     position: fixed;
     top: -15vh;
-    height: 100vh;
-    width: 100vw;
+    height: 99%;
+    width: 99%;
     z-index: 3;
     padding-top: 15vh;
     padding-left: 5vw;
@@ -59,7 +60,7 @@ body {
 .underground_map img {
     position: absolute;
     height: 563px;
-
+    overflow-y: scroll;
 }
 
 .underground_map .clickbox {
