--- a/assets/css/popUp.css
+++ b/assets/css/popUp.css
@@ -1,16 +1,3 @@
-.popUpBackground {
-    display: inline;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    color: white;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 1);
-}
-
 .popUpBox {
     background-color: black;
     display: block;
